feat: add OrderedItemRow DTO and update OrderMapper and OrderService for item retrieval