@@ -1,6 +1,8 @@
 package com.cdmts.paymentApps.service;
 
 import java.util.List;
+import java.util.Map;
+import java.util.stream.Collectors;
 
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
@@ -9,6 +11,7 @@ import com.cdmts.paymentApps.mapper.OrderItemMapper;
 import com.cdmts.paymentApps.mapper.OrderMapper;
 import com.cdmts.paymentApps.model.dto.OrderCreateRequest;
 import com.cdmts.paymentApps.model.dto.OrderResponse;
+import com.cdmts.paymentApps.model.dto.OrderedItemRow;
 import com.cdmts.paymentApps.model.entity.Order;
 import com.cdmts.paymentApps.model.entity.OrderItem;
 
@@ -24,12 +27,13 @@ public class OrderService {
 	
 	
 	
-	public OrderResponse toResponse(Order order) {
+	public OrderResponse toResponse(Order order,List<OrderResponse.OrderedItem> orderedItems) {
 		return new OrderResponse(
 						order.getOrderId(),
 						order.getOrderDate(),
 						order.getReservedTime(),
-						order.getServingStatus()
+						order.getServingStatus(),
+						orderedItems
 				);
 	}
     
@@ -57,13 +61,27 @@ public class OrderService {
     }
     
     public List<OrderResponse> getOrdersByIds(List<Long> orderIds) {
-    	
-    	List<Order> orderEntities=orderMapper.selectOrdersByOrderIds(orderIds);
-    	
-    	return orderEntities.stream()
-    			.map(order->toResponse(order))
-    			.toList();
-    	
+
+        List<Order> orderEntities=orderMapper.selectOrdersByOrderIds(orderIds);
+
+        List<OrderedItemRow> itemRows=orderMapper.selectOrderedItemsByOrderIds(orderIds);
+
+        Map<Long, List<OrderResponse.OrderedItem>> itemsByOrderId = itemRows.stream()
+                .collect(Collectors.groupingBy(
+                        OrderedItemRow::getOrderId,
+                        Collectors.mapping(
+                                row -> new OrderResponse.OrderedItem(
+                                        row.getItemId(),row.getName(),row.getQuantity()),
+                                Collectors.toList()
+                        )
+                ));
+
+        return orderEntities.stream()
+                .map(order->toResponse(
+                        order,
+                        itemsByOrderId.getOrDefault(order.getOrderId(),List.of())
+                ))
+                .toList();
     }
     
     @Transactional
@@ -93,13 +111,32 @@ public class OrderService {
     }
     
     public List<OrderResponse> getOrdersByServingStatus(Short servingStatus) {
-    	
-    	List<Order> orderEntities=orderMapper.selectOrdersByServingStatus(servingStatus);
-    	
-    	return orderEntities.stream()
-    			.map(order->toResponse(order))
-    			.toList();
-    	
+
+        List<Order> orderEntities=orderMapper.selectOrdersByServingStatus(servingStatus);
+
+        List<Long> orderIds=orderEntities.stream()
+                .map(Order::getOrderId)
+                .toList();
+
+        List<OrderedItemRow> itemRows=orderIds.isEmpty()
+        									?List.of():orderMapper.selectOrderedItemsByOrderIds(orderIds);
+
+        Map<Long, List<OrderResponse.OrderedItem>> itemsByOrderId=itemRows.stream()
+                .collect(Collectors.groupingBy(
+                        OrderedItemRow::getOrderId,
+                        Collectors.mapping(
+                                row->new OrderResponse.OrderedItem(
+                                        row.getItemId(),row.getName(),row.getQuantity()),
+                                Collectors.toList()
+                        )
+                ));
+
+        return orderEntities.stream()
+                .map(order->toResponse(
+                        order,
+                        itemsByOrderId.getOrDefault(order.getOrderId(),List.of())
+                ))
+                .toList();
     }
     
 }
